# mesh2splat

./: CMakeLists.txt  ProjectBlog.md  README.md  requirements.txt  setup.py  test_enhanced_conversion.py
mesh2splat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: HeadlessConverter.cpp  HeadlessConverter.hpp  cpu_sampler.hpp  pybind11_bindings.cpp
src/imGuiUi/: ImGuiUI.cpp  ImGuiUi.hpp
src/parsers/: parsers.hpp
src/renderer/: guiRendererConcreteMediator.cpp  renderer.cpp  renderer.hpp
src/renderer/renderPasses/: ConversionPass.cpp
src/shaders/conversion/: converterFS.glsl
src/utils/: SceneManager.cpp  glUtils.cpp  utils.cpp  utils.hpp  utils_simplified.cpp  utils_simplified.hpp
